# sphereflake-raytracer

./: CMakeLists.txt  Makefile  README.md  README.txt  sphereflake-sse3
Shaders/: post_final.glsl
binaries/Shaders/: post_ssao.glsl  post_ssao_blur.glsl
lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.0.4.bin.WIN64/include/GLFW/: glfw3.h
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glm/glm/detail/: intrinsic_integer.hpp
sphereflake/: CommandLine.h  Filesystem.h  GL.h  GLFramebufferObject.cpp  GLFramebufferObject.h  GLPixelBufferObject.h  GLProgram.cpp  GLProgram.h  GLTexture2D.h  README.txt  SIMD.h  SIMD_AVX.h  SIMD_SSE.h  SSAO.cpp  SSAO.h  Sobol.cpp  Sobol.h  Sphereflake.cpp  Sphereflake.h  StringUtil.h  Util.h  camera.h  draw_coordinates.glsl  glcorearb.h  kd_sphereflake.h  main.cpp  matmult.h  post_blit.glsl  post_final.glsl  post_ssao.glsl  post_ssao_blur.glsl  post_ssao_blur_horizontal.glsl  post_ssao_blur_vertical.glsl  post_vertex.glsl  raytrace_sphereflake.h  sphereflake - Copy.glsl  sphereflake.glsl  sphereflake.sln  sphereflake.vcxproj  sphereflake.vcxproj.filters  (+2 more)
sphereflake/Shaders/: post_ssao.glsl
